--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noindex, nofollow">
-    <title>GHS Dashboard Secured</title>
+    <title>GHS Dashboard</title>
     <style>
         html, body {
             margin: 0;
