--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <a href="index.html" class="waves-effect"><i class="material-icons back-btn">arrow_back</i></a>
 
                 <h6 class="section-header">Log Todays Hours</h6>
-                <iframe class="vivify fadeIn duration-500" src="/formlog.html"></iframe>
+                <iframe class="vivify fadeIn duration-500" src="formlog.html"></iframe>
             </section>
 
             <div id="view-hours" class="view-hours">
