--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>GHS Workforce Development</title>
     <link rel="stylesheet" href="main.css">
     <script src="script.js"></script>
+    <link rel="shortcut icon" href="/Branding/512px logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
