--- a/index.html
+++ b/index.html
@@ -18,7 +18,24 @@
     <link rel="stylesheet" href="vivify.min.css">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.12/handlebars.min.js">
     </script>
-    
+            <script >
+
+                if ("serviceWorker" in navigator) {
+                  if (navigator.serviceWorker.controller) {
+                    console.log("[PWA Builder] active service worker found, no need to register");
+                  } else {
+                    // Register the service worker
+                    navigator.serviceWorker
+                      .register("pwabuilder-sw.js", {
+                        scope: "/index.html"
+                      })
+                      .then(function (reg) {
+                        console.log("[PWA Builder] Service worker has been registered for scope: " + reg.scope);
+                      });
+                  }
+                }
+                
+                </script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
